<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/todo"
        app:showAsAction="ifRoom" >

        <menu>
            <group
                android:id="@+id/menu_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_change_settings"
                    android:title="@string/change_language"
                    />
                <item
                    android:id="@+id/action_menu_reminder"
                    android:title="@string/reminder"
                    />

            </group>
        </menu>

    </item>

</menu>